Add camera ready notification and handling
Introduces a 'camera-ready' IPC event to signal when the camera stream is ready. The backend now waits for this event before showing the camera window, with a 5-second timeout fallback. The frontend sends the notification after the video stream starts playing.

--- a/src/ui/camera.html
+++ b/src/ui/camera.html
@@ -77,6 +77,16 @@
           currentStream = stream;
           errorMsg.style.display = "none";
           video.style.display = "block";
+
+          // Wait for video to actually start playing
+          await new Promise((resolve) => {
+            video.onloadeddata = resolve;
+          });
+
+          // Notify that camera is ready
+          if (window.electronAPI) {
+            window.electronAPI.cameraReady();
+          }
         } catch (error) {
           console.error("Error accessing camera:", error);
           video.style.display = "none";
