Improve countdown tick animation visibility
Initial styles for the countdown element now set opacity to 0, scale to 0.6, and visibility to hidden. The animateTick function explicitly sets visibility to visible before animating, ensuring the element appears correctly during countdown transitions.

--- a/src/ui/countdown.html
+++ b/src/ui/countdown.html
@@ -28,6 +28,9 @@
         font-weight: bold;
         text-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
         will-change: transform, opacity;
+        opacity: 0;
+        transform: scale(0.6);
+        visibility: hidden;
       }
 
       .hidden {
@@ -44,6 +47,7 @@
 
       function animateTick(value) {
         countdownElement.textContent = value;
+        countdownElement.style.visibility = "visible";
         // Use the Web Animations API for smoother, GPU-friendly animation
         countdownElement.animate(
           [
