--- a/src/ui/control-bar.html
+++ b/src/ui/control-bar.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Recording</title>
   <style>
-    body, #root { margin: 0; padding: 0; background: transparent !important; overflow: hidden; }
+    body, #root { margin: 0; padding: 0; background: transparent; overflow: hidden; }
   </style>
 </head>
 <body>
