fixed protocol handling for microsoft auth and decryption

--- a/src/ui/successTemplate.html
+++ b/src/ui/successTemplate.html
@@ -10,7 +10,7 @@
     <h1>Authentication Successful</h1>
     <p>You can return to the application and close this window.</p>
     <p>
-        <a id="deeplink" href="yakshaver-desktop://auth">Open App</a>
+        <a id="deeplink" href="redirectUrl">Open App</a>
     </p>
     <script>
       (() => {
